Support showing multiple rankings

--- a/templates/common.html
+++ b/templates/common.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
   <html>
   <head>
-  <title>Live Derby Stats</title>
+  <title>DerbyStats: Rankings</title>
   <style>
   body {
     background-color: #c1946a;
@@ -54,6 +54,19 @@
   .footer {
     font-size: 70%;
     text-align: center;
+  }
+
+  .selector span {
+    border: 1px solid #aaaaaa;
+    padding: 0 1ex;
+    font-size: 150%;
+    text-align: center;
+  }
+  .selector span a {
+    text-decoration: none;
+  }
+  .selector span.selected {
+    background-color: #3e4444;
   }
 
 
