--- a/templates/common.html
+++ b/templates/common.html
@@ -87,7 +87,7 @@
 {{end}}
 
 {{define "footer"}}
- <div class="footer"><a href="https://github.com/DerbyStats/">Source Code</a></div>
+<div class="footer"><a href="https://live.derbystats.eu/">Live</a> | <a href="https://github.com/DerbyStats/">Source Code</a></div>
 </div> {{/* main */}}
 </body>
 </html>
